--- a/src/app/component/entry-form/entry-form/entry-form.component.html
+++ b/src/app/component/entry-form/entry-form/entry-form.component.html
@@ -2,5 +2,5 @@
 <form>
     <p>Entry Title: <input #title /></p>
     <p>Entry Body: <textarea #body ></textarea></p>
-    <button (click)="addBlogEntry(title.value, body.value); goBack();">Post</button>
+    <button (click)="addBlogEntry(title.value, body.value)">Post</button>
 </form>
